test/scc/pp/errors/033.a
033.t:1:2: error: unterminated #if